@@ -18,7 +18,12 @@ import static com.edddoubled.orunmila.devpathroute.model.user.Permission.*;
  */
 @RequiredArgsConstructor
 public enum Role {
-	USER(Collections.emptySet()),
+	USER(
+			Set.of(
+					USER_READ
+			)
+	),
+
 	ADMIN(
 			Set.of(
 					ADMIN_READ,
